<resources>
    <string name="app_name">Keep It!</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="add_image">Add Image</string>
    <string name="add_drawing">Add Drawing</string>
    <string name="open_camera">Open Camera</string>
    <string name="speak">Speak</string>
    <string name="detect_language">Detect Language</string>
    <string name="translate">Translate</string>
    <string name="detect_text">Detect Text</string>
    <string name="open_in_drawing">Open In Drawing</string>
    <string name="log_out">Log Out</string>
</resources>